--- a/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
@@ -327,7 +327,7 @@ QuotedSOldLeads As screen:
                         Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
                         Width: =Parent.Width/1.3
                         X: =20
-                        Y: =htmltextContractNumberSLS_2.Y+htmltextContractNumberSLS_2.Height
+                        Y: =htmltextContractNumberSL.Y+htmltextContractNumberSL.Height
                         ZIndex: =6
 
                     htmltextTrackingNumberSLS_2 As htmlViewer:
@@ -343,7 +343,7 @@ QuotedSOldLeads As screen:
                         Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
                         Width: =Parent.Width/1.3
                         X: =20
-                        Y: =If(btnheaderSoldLeads.Text="Quoted Leads" ||btnheaderSoldLeads.Text="Sold Leads",lineEstimatenoSLS_2.Y+lineEstimatenoSLS_2.Height+10,20)
+                        Y: =If(btnheaderSoldLeads.Text="Quoted Leads" ||btnheaderSoldLeads.Text="Sold Leads",lineEstimatenoSL.Y+lineEstimatenoSL.Height+10,20)
                         ZIndex: =7
 
                     htmltxtAddressSLS_2 As htmlViewer:
@@ -398,7 +398,7 @@ QuotedSOldLeads As screen:
                         Y: =htmltxtZipcodeSLS_2.Y+htmltxtZipcodeSLS_2.Height
                         ZIndex: =10
 
-                    btnSubmittedLeadSLS_2 As button:
+                    btnSubmittedLeadSL As button:
                         BorderColor: =RGBA(219, 219, 219, 1)
                         BorderThickness: =4
                         Color: =RGBA(0, 0, 0, 0)
@@ -406,7 +406,7 @@ QuotedSOldLeads As screen:
                         Height: =borderLeadsSLS_2.Height
                         HoverColor: =RGBA(0, 0, 0, 0)
                         HoverFill: =RGBA(0, 0, 0, 0)
-                        OnSelect: |
+                        OnSelect: |+
                             =//Navigate(ViewLeadScreen);
                             Set(VarFormMode,ThisItem);
                             Set(VarLtdID,ThisItem.ID);
@@ -417,8 +417,6 @@ QuotedSOldLeads As screen:
                             
                             Set(VarLeadstatus,ThisItem.LeadStatus);
                             
-                            /*{LtdID:ThisItem.ID,ContractNumber:ThisItem.'ContractNumber ',BuildingName:ThisItem.'BuildingName ',Address:ThisItem.Address,Zipcode:ThisItem.'ZipCode ',UnitCount:ThisItem.NumberofUnits,UnitDescription:ThisItem.UnitDescription,Scope:ThisItem.PrimaryScopeofWorkLID,ScopeOfWork:ThisItem.SecondaryScopeofWorkLID,CustomScope:ThisItem.CustomScopeofWork,unitdown:ThisItem.IsUnitDown,AdditionalExpensesRequired:ThisItem.AdditionalExpensesRequired,CommunicatedtoCustomer:ThisItem.CommunicatedToCustomer,EstimatedHours:ThisItem.'EstimatedHours ',Material:ThisItem.Notes,travelRequired:ThisItem.TravelRequired//LeadImage:ThisItem.LeadImages
-                            }*/
                         PressedBorderColor: =RGBA(0, 0, 0, 0)
                         PressedFill: =RGBA(0, 0, 0, 0)
                         RadiusBottomLeft: =8
@@ -433,7 +431,7 @@ QuotedSOldLeads As screen:
                         Y: =10
                         ZIndex: =11
 
-                    lineEstimatenoSLS_2 As rectangle:
+                    lineEstimatenoSL As rectangle:
                         BorderColor: =RGBA(116, 116, 116, 1)
                         DisplayMode: =DisplayMode.View
                         Fill: =RGBA(202, 202, 202, 1)
@@ -445,14 +443,13 @@ QuotedSOldLeads As screen:
                         Y: =lblPriceSLS_5.Height+lblPriceSLS_5.Y
                         ZIndex: =12
 
-                    htmltxtStatusDateSLS_4 As htmlViewer:
+                    htmltxtSoldDateSL As htmlViewer:
                         AutoHeight: =true
                         DisplayMode: =DisplayMode.View
                         Font: =Font.Arial
                         Height: =If(btnheaderSoldLeads.Text="Sold Leads",25,0)
                         HtmlText: |-
-                            =//If(btnheaderSLS.Text="Quoted leads","<b>BID Date : </b>" & ThisItem.StatusDate,btnheaderSLS.Text="Sold Leads","<b>Sold date : </b>" & ThisItem.StatusDate,"<b>Lead status date : </b>" & ThisItem.StatusDate)
-                            "<b>Sold date : </b>" & Text(ThisItem.SoldLeadDate,"yyyy/mm/dd hh:mm AM/PM")
+                            ="<b>Sold date : </b>" & Text(ThisItem.SoldLeadDate,"yyyy/mm/dd hh:mm AM/PM")
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
                         PaddingTop: =0
@@ -463,7 +460,7 @@ QuotedSOldLeads As screen:
                         Y: =htmltxtDateSLS_2.Y+htmltxtDateSLS_2.Height
                         ZIndex: =13
 
-                    htmltextContractNumberSLS_2 As htmlViewer:
+                    htmltextContractNumberSL As htmlViewer:
                         AutoHeight: =true
                         Font: =Font.Arial
                         Height: =20
@@ -570,7 +567,7 @@ QuotedSOldLeads As screen:
                         Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
                         Width: =Parent.Width/1.08
                         X: =20
-                        Y: =htmltxtStatusDateSLS_4.Y+htmltxtStatusDateSLS_4.Height
+                        Y: =htmltxtSoldDateSL.Y+htmltxtSoldDateSL.Height
                         ZIndex: =19
 
                     imgMessageSL As image:
