--- a/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
@@ -190,7 +190,7 @@ QuotedSOldLeads As screen:
                 Y: =ctnSortBarSoldLeads.Y+ctnSortBarSoldLeads.Height+10
                 ZIndex: =1
 
-                lblLeadYearSLS_2 As label:
+                lblLeadYearSL As label:
                     Align: =Align.Center
                     AutoHeight: =true
                     Color: =RGBA(255, 0, 0, 1)
@@ -223,7 +223,7 @@ QuotedSOldLeads As screen:
                     Y: =rectangleYearSL.Height
                     ZIndex: =2
 
-                    borderLeadsSLS_2 As rectangle:
+                    borderLeadsSL As rectangle:
                         BorderColor: =RGBA(0, 0, 0, 0)
                         BorderThickness: =2
                         Fill: =RGBA(0, 0, 0, 0)
@@ -285,7 +285,7 @@ QuotedSOldLeads As screen:
                         Height: =2
                         OnSelect: =Select(Parent)
                         Visible: =If(btnheaderSoldLeads.Text="Quoted Leads" ||btnheaderSoldLeads.Text="Sold Leads",true,false)
-                        Width: =borderLeadsSLS_2.Width-40
+                        Width: =borderLeadsSL.Width-40
                         X: =20
                         Y: =lblTitleTotalIncentivesSL.Y+lblTitleTotalIncentivesSL.Height
                         ZIndex: =4
@@ -397,7 +397,7 @@ QuotedSOldLeads As screen:
                         BorderThickness: =4
                         Color: =RGBA(0, 0, 0, 0)
                         Fill: =RGBA(0, 0, 0, 0)
-                        Height: =borderLeadsSLS_2.Height
+                        Height: =borderLeadsSL.Height
                         HoverColor: =RGBA(0, 0, 0, 0)
                         HoverFill: =RGBA(0, 0, 0, 0)
                         OnSelect: |+
@@ -432,7 +432,7 @@ QuotedSOldLeads As screen:
                         Height: =2
                         OnSelect: =Select(Parent)
                         Visible: =If(btnheaderSoldLeads.Text="Quoted Leads" ||btnheaderSoldLeads.Text="Sold Leads",true,false)
-                        Width: =borderLeadsSLS_2.Width-40
+                        Width: =borderLeadsSL.Width-40
                         X: =20
                         Y: =lblPriceSL.Height+lblPriceSL.Y
                         ZIndex: =12
@@ -654,7 +654,7 @@ QuotedSOldLeads As screen:
                     Text: ="Total Leads"
                     VerticalAlign: =VerticalAlign.Top
                     Width: =Parent.Width/3.3
-                    X: =lblLeadYearSLS_2.Width+lblLeadYearSLS_2.X
+                    X: =lblLeadYearSL.Width+lblLeadYearSL.X
                     Y: =2*(btnLeadsSL.Y)
                     ZIndex: =5
 
