--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -804,7 +804,10 @@ DashboardScreen As screen:
                             DisabledBorderColor: =RGBA(116, 116, 116, 1)
                             DisabledColor: =RGBA(0, 0, 0, 0)
                             DisabledFill: =RGBA(0, 0, 0, 0)
-                            DisplayMode: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No' && Value(TotalProposedLead)<>0))=0,DisplayMode.Disabled,DisplayMode.Edit)
+                            DisplayMode: |-
+                                =If(yearly=true,
+                                If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No' && Year=lblyearDS.Text && Value(TotalProposedLead)<>0))=0,DisplayMode.Disabled,DisplayMode.Edit),
+                                If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No' && Value(TotalProposedLead)<>0))=0,DisplayMode.Disabled,DisplayMode.Edit))
                             Fill: =RGBA(0, 0, 0, 0)
                             Font: =Font.Arial
                             Height: =Parent.Height
@@ -981,7 +984,11 @@ DashboardScreen As screen:
                             DisabledBorderColor: =RGBA(116, 116, 116, 1)
                             DisabledColor: =RGBA(0, 0, 0, 0)
                             DisabledFill: =RGBA(0, 0, 0, 0)
-                            DisplayMode: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'&& Value(TotalSoldLead)<>0))=0,DisplayMode.Disabled,DisplayMode.Edit)
+                            DisplayMode: |
+                                =//If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'&& Value(TotalSoldLead)<>0))=0,DisplayMode.Disabled,DisplayMode.Edit)
+                                If(yearly=true,
+                                If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No' && Year=lblyearDS.Text && Value(TotalSoldLead)<>0))=0,DisplayMode.Disabled,DisplayMode.Edit),
+                                If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No' && Value(TotalSoldLead)<>0))=0,DisplayMode.Disabled,DisplayMode.Edit))
                             Fill: =RGBA(0, 0, 0, 0)
                             Height: =Parent.Height
                             HoverFill: =RGBA(0, 0, 0, 0)
