--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -855,7 +855,7 @@ DashboardScreen As screen:
                     Width: =Parent.Width/2.2
                     ZIndex: =2
 
-                    Image1_4 As image:
+                    imgUnreadIndicatorDS As image:
                         DisplayMode: =DisplayMode.View
                         Height: =20
                         Image: =email
