--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -167,7 +167,7 @@ ViewDetailsScreen As screen:
                 Fill: =RGBA(255, 255, 255, 1)
                 FillPortions: =0
                 Height: |-
-                    =LeadTrackingNumber_DataCard1.Height+ContractNumberVDS.Height + 'Building NameVDS'.Height + 'PinCode VDS'.Height + 'Address VDS'.Height + 'UnitCount VDS'.Height + UnitDescriptionVDS.Height + 'PrimaryScopeofWorkLID VDS'.Height + SecondaryScopeofWorkLID_DataCard1.Height + ManuallyScopeOfWork_DataCard3_3.Height + EstimatedHours_DataCard1_4.Height + Material_DataCard1_4.Height + 'Unit Down_DataCard2_4'.Height + 'Additional expenses required_DataCard2_3'.Height + 
+                    =LeadTrackingNumber_DataCard1.Height+ContractNumberVDS.Height + 'Building NameVDS'.Height + 'PinCode VDS'.Height + 'Address VDS'.Height + 'UnitCount VDS'.Height + UnitDescriptionVDS.Height + 'PrimaryScopeofWorkLID VDS'.Height + SecondaryScopeofWorkLIDVDS.Height + ManuallyScopeOfWork_DataCard3_3.Height + EstimatedHours_DataCard1_4.Height + Material_DataCard1_4.Height + 'Unit Down_DataCard2_4'.Height + 'Additional expenses required_DataCard2_3'.Height + 
                          'Travel Required_DataCard2_3'.Height + 'Communicated to Customer_DataCard2_3'.Height +
                          If(IsBlank(DataCardValue3.Text),0,
                           'CustomerName _DataCard2'.Height) +If(IsBlank(DataCardValue4.Text),0, 'CustomerContact _DataCard1'.Height)+
@@ -624,7 +624,7 @@ ViewDetailsScreen As screen:
                         Y: =lblPrimaryScopeofWorkLIDVDS.Y + lblPrimaryScopeofWorkLIDVDS.Height 
                         ZIndex: =2
 
-                SecondaryScopeofWorkLID_DataCard1 As typedDataCard.comboBoxEditCard:
+                SecondaryScopeofWorkLIDVDS As typedDataCard.comboBoxEditCard:
                     BorderColor: =RGBA(0, 0, 0, 1)
                     BorderStyle: =BorderStyle.Solid
                     DataField: ="shlrf_SecondaryScopeofWorkLID"
@@ -634,13 +634,13 @@ ViewDetailsScreen As screen:
                     Fill: =RGBA(0, 0, 0, 0)
                     Height: =50
                     Required: =false
-                    Update: =DataCardValue2.Selected
+                    Update: =intxtSecondaryScopeofWorkLIDVDS.Selected
                     Width: =Parent.Width
                     X: =0
                     Y: =8
                     ZIndex: =1
 
-                    DataCardKey2 As label:
+                    lblSecondaryScopeofWorkLIDVDS As label:
                         AutoHeight: =true
                         Color: =RGBA(0, 0, 0, 1)
                         Font: =Font.Arial
@@ -654,7 +654,7 @@ ViewDetailsScreen As screen:
                         Y: =10
                         ZIndex: =1
 
-                    DataCardValue2 As combobox:
+                    intxtSecondaryScopeofWorkLIDVDS As combobox:
                         BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                         ChevronBackground: =RGBA(0, 0, 0, 1)
                         Default: =LookUp(SecondaryScopeofWorks,ID=ThisItem.SecondaryScopeofWorkLID.ID)
@@ -665,40 +665,15 @@ ViewDetailsScreen As screen:
                         Items: =SecondaryScopeofWorks
                         PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 5)
                         SearchFields: =["shlrf_secondaryscopeofworkname"]
-                        SearchItems: =Search(SecondaryScopeofWorks,DataCardValue2.SearchText,"shlrf_secondaryscopeofworkname")
+                        SearchItems: =Search(SecondaryScopeofWorks,intxtSecondaryScopeofWorkLIDVDS.SearchText,"shlrf_secondaryscopeofworkname")
                         SelectionFill: =RGBA(0, 0, 0, 1)
                         SelectMultiple: =false
                         Size: =If(Parent.Width<378,12,Parent.Width<500,14,16)
                         Tooltip: =Parent.DisplayName
                         Width: =Parent.Width - 60
                         X: =30
-                        Y: =DataCardKey2.Y + DataCardKey2.Height
+                        Y: =lblSecondaryScopeofWorkLIDVDS.Y + lblSecondaryScopeofWorkLIDVDS.Height
                         ZIndex: =2
-
-                    ErrorMessage2 As label:
-                        AutoHeight: =true
-                        Height: =10
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =DataCardValue2.Y + DataCardValue2.Height
-                        ZIndex: =3
-
-                    StarVisible2 As label:
-                        Align: =Align.Center
-                        Height: =DataCardKey2.Height
-                        Text: ="*"
-                        Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                        Width: =30
-                        Wrap: =false
-                        Y: =DataCardKey2.Y
-                        ZIndex: =4
 
                 ManuallyScopeOfWork_DataCard3_3 As typedDataCard.textualEditCard:
                     BorderColor: =RGBA(0, 0, 0, 1)
